# Algorithms-And-Data-Structures

./: CMakeLists.txt  practice.cpp
1-pointers-and-arrays/: PointersArrays.cpp
10-graph/: Graph.h  GraphSTL.h  main.cpp  mainSTL.cpp
11-disjoint-set/: DisjointSet.h  main.cpp
12-algorithms/: Heap.h  Kruskal.h  MST.cpp  ShortestPath.cpp
12-graph/: Graph.h
13-sparse-matrix/: CircularSparseMatrix.h  SparseMatrix.h  main.cpp  main2.cpp
14-algorithms/: MST.cpp  ShortestPath.cpp
15-sparse-matrix/: CircularSparseMatrix.h  SparseMatrix.h  main.cpp  main2.cpp
2-forward-list/: ForwardList.cpp
2-linked-list/: ForwardList.cpp  ForwardList.h  main.cpp
3-doubly-linked-list/: CircularDoublyLinkedList.cpp  DoublyLinkedList.cpp
4-stack/: Stack.cpp
5-queue/: CircularQueue.cpp  Queue.cpp  Queue.h  main.cpp
6-hash/: Hash.h  main.cpp
7-bst/: BST.h  main.cpp
8-avl-tree/: AVLTree.h  main.cpp
8-b-tree/: BPlus.cpp  BTree.cpp
9-heap/: Heap.h
9-trie/: Trie.cpp
