cmake_minimum_required(VERSION 3.28)
project(Algorithms-And-Data-Structures)

set(CMAKE_CXX_STANDARD 17)

add_executable(PointersArrays 1-pointers-and-arrays/PointersArrays.cpp)
add_executable(LinkedList 2-linked-list/ForwardList.h 2-linked-list/main.cpp)
add_executable(CircularDoublyLinkedList 3-doubly-linked-list/CircularDoublyLinkedList.cpp)
add_executable(DoublyLinkedList 3-doubly-linked-list/DoublyLinkedList.cpp)
add_executable(Stack 4-stack/Stack.cpp)
add_executable(Queue 5-queue/Queue.h 5-queue/main.cpp)
add_executable(CircularQueue 5-queue/CircularQueue.cpp)
add_executable(Hash 6-hash/main.cpp 6-hash/Hash.h)
add_executable(BST 7-bst/main.cpp 7-bst/BST.h)
add_executable(AVL 8-avl-tree/main.cpp 8-avl-tree/AVLTree.h)
add_executable(BTree 10-b-tree/BTree.cpp)
add_executable(BPlus 10-b-tree/BPlus.cpp)
add_executable(Trie 11-trie/Trie.cpp)
add_executable(Graph 12-graph/Graph.h 12-graph/main.cpp)
add_executable(MST 14-algorithms/MST.cpp)
add_executable(ShortestPath 14-algorithms/ShortestPath.cpp)
add_executable(SparseMatrix 15-sparse-matrix/main.cpp 15-sparse-matrix/SparseMatrix.h)
add_executable(CircularSparseMatrix 15-sparse-matrix/main2.cpp 15-sparse-matrix/CircularSparseMatrix.h)